Update xp feature js

--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -265,9 +265,9 @@
             <script type="text/javascript">
                 document.addEventListener('DOMContentLoaded', function() {
                     let currentQuestion = 1;
-                    let totalQuestions = 0;
+                    let totalQuestions = 10;
                     let correctAnswers = 0;
-                    let totalXP = 0;
+                    let totalXP = "{{ current_xp }}";
                     
                     const CORRECT_ANSWER_XP = 10;
                     const WRONG_ANSWER_XP = 7;
