--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -267,7 +267,7 @@
                     let currentQuestion = 1;
                     let totalQuestions = 10;
                     let correctAnswers = 0;
-                    let totalXP = "{{ current_xp }}";
+                    let totalXP = 0;
                     
                     const CORRECT_ANSWER_XP = 10;
                     const WRONG_ANSWER_XP = 7;
