--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -59,6 +59,15 @@
     .card {
         background-color: rgb(30, 32, 32);
     }
+
+    .xp-display {
+        padding: 0.75rem;
+        background-color: #333b42;
+        border-radius: 0.375rem;
+        box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+        margin: 1rem;
+        color: whitesmoke;
+    }
 </style>
 
 <body>
