--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -132,12 +132,21 @@
         flex-direction: column;
         gap: 10px;
     }
+
+    .xp-display {
+        padding: 0.75rem;
+        background-color: #333b42;
+        border-radius: 0.375rem;
+        box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+        margin: 1rem;
+        color: rgb(70, 227, 13);
+    }
 </style>
 
 <body>
     <div class="container-fluid round-font-style">
         <div class="row flex-nowrap">
-            <div class="col-md-6 py-3 my-3" style="margin-left: 24rem; margin-right: -60rem;">
+            <div class="col-md-6 py-3 my-3" style="margin-right: -60rem;">
                 {% if user.is_authenticated %}
                 <div class="quiz-header">
                     <div class="card-header">
