--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -66,7 +66,7 @@
         border-radius: 0.375rem;
         box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
         margin: 1rem;
-        color: rgb(70, 227, 13);
+        color: whitesmoke;
     }
 </style>
 
