Update XP global color

--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -100,7 +100,7 @@
         border-radius: 0.375rem;
         box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
         margin: 1rem;
-        color: #13e1a6;
+        color: #13e18f;
     }
 </style>
 </head>
