Update Google Auth URL

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -36,7 +36,7 @@
 		<div class="card pt-4 pb-4 px-5 mt-2 bg-card-primary">
 			<div id="g_id_onload"
 				data-client_id="484469051472-imsb2l4o7hk04u4chdham8mb9fa3f4q4.apps.googleusercontent.com"
-				data-context="use" data-ux_mode="redirect" data-login_uri="https://knowmona-c08e02f17b36.herokuapp.com/auth-receiver"
+				data-context="use" data-ux_mode="redirect" data-login_uri="https://www.knowmona.com/auth-receiver"
 				style="background-color: black;" data-auto_prompt="false">
 			</div>
 
