--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -155,7 +155,7 @@
 
     <div class="energy-display top-0 end-0 m-3 p-3 bg-dark rounded position-fixed" data-bs-toggle="tooltip" 
     data-bs-placement="bottom" 
-    title="Each quiz costs 10 energy. Energy resets daily!">
+    title="Each quiz costs ten energy. Energy resets daily!">
         <div class="d-flex align-items-center">
             <span class="me-2">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="yellow" class="bi bi-lightning-charge-fill" viewBox="0 0 16 16">
