Update homepage templates

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -35,7 +35,14 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav" style="margin-left: 59rem;">
+                        <div class="navbar-nav" style="margin-left: 54rem;">
+                            <a class="nav-item nav-link" href="#features">
+                                <h6>Features</h6>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
                             <a class="nav-item nav-link" href="{% url 'about' %}">
                                 <h6>About</h6>
                             </a>
