--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -19,6 +19,21 @@
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
+    .bg-card-primary {
+        background-color: rgb(30, 32, 32);
+    }
+
+    .round-font-style {
+        font-family: "Varela Round", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+    }
+
+    body {
+        background-color: rgb(18, 20, 20);
+        color: #f1f1f1 !important;
+    }
 </style>
 
 <body>
@@ -35,7 +50,14 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav" style="margin-left: 59rem;">
+                        <div class="navbar-nav" style="margin-left: 54rem;">
+                            <a class="nav-item nav-link" href="#features">
+                                <h6>Features</h6>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
                             <a class="nav-item nav-link" href="{% url 'about' %}">
                                 <h6>About</h6>
                             </a>
@@ -51,11 +73,11 @@
                 </nav>
                 <br>
                 <div class="container">
-                    <div class="row">
+                    <div class="row mb-5">
                         <div class="col"><img src="{% static 'media/homephoto.png' %}" alt="Homepage image"
                                 style="width: 650px; height: 520px;">
                         </div>
-                        
+
 
                         <div class="col text-center">
                             <h1 style="text-align: center; margin-top: 60px;">Have fun and learn from testing your
@@ -85,6 +107,26 @@
                         </div>
                     </div>
                 </div>
+                <div class="row mb-5" id="features">
+                    <div class="col text-center">
+                        <h1 style="text-align: center; margin-top: 140px;">Let AI generate quizzes about any topic or
+                            subject on the fly</h1>
+                    </div>
+
+                    <div class="col"><img src="{% static 'media/quiz-screenshot.png' %}" alt="Quiz example"
+                            style="width: 463px; height: 347px; border-radius: 10%;">
+                    </div>
+                </div>
+                <div class="row mb-5">
+                    <div class="col"><img src="{% static 'media/files-and-web-search.png' %}" alt="Homepage image"
+                            style="width: 463px; height: 347px;">
+                    </div>
+
+                    <div class="col text-center">
+                        <h1 style="text-align: center; margin-top: 140px;">Automated web search and uploaded files for
+                            customized context</h1>
+                    </div>
+                </div>
                 <br>
                 <hr style="margin-top: 20px;">
                 <div style="text-align: center; margin-top: 20px;">
@@ -93,18 +135,17 @@
                 </div>
             </div>
         </div>
-    </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+            integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
