--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -19,6 +19,11 @@
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
+        
+    p {
+        color: white;
+    }
 </style>
 
 <body>
@@ -26,7 +31,7 @@
         <div class="row flex-nowrap">
             <div class="py-3">
                 <nav class="navbar navbar-expand m-0 p-0">
-                    <a class="navbar-brand" style="margin-left: 9rem;" href="{% url 'home' %}">
+                    <a class="navbar-brand" style="margin-left: 7rem;" href="{% url 'home' %}">
                         <h2 style="color:rgb(2, 202, 202); text-align:left; margin-left: 10px;">knowmona</h2>
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -36,7 +41,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav" style="margin-left: 54rem;">
-                            <a class="nav-item nav-link" href="#features">
+                            <a class="nav-item nav-link" href="{% url 'home' %}#features">
                                 <h6>Features</h6>
                             </a>
                         </div>
@@ -57,19 +62,17 @@
                     </div>
                 </nav>
                 <br>
-                <div class="container" style="margin-left: 9rem;">
-                    <h2 class="welcome" style="color: gray;">About</h2>
+                <div class="container" style="margin-left: 12rem; margin-right: 12rem; padding-right: 12rem;">
+                    <h2 class="welcome" style="color: rgb(164, 164, 164);">About</h2>
                     <p>
                         Knowmona aims to enhance students' learning journey by providing fun and interactive quizzes on
                         any topic or subject powered by generative artificial intelligence with extensive information
                         revival.
                     </p>
-                    <br>
                     <p>Developed and maintained by Grantley Cullar</p>
                 </div>
-                <br>
-                <hr style="margin-top: 22rem;">
-                <div style="text-align: center; margin-top: 20px;">
+                <hr style="margin-top: 27rem;">
+                <div style="text-align: center;">
                     <small><a style="color: rgb(139, 139, 139); text-decoration: none;"
                             href="http://dev.knowmona.com">Grantley Cullar 2025</a></small>
                 </div>
