--- a/app/templates/auth_base.html
+++ b/app/templates/auth_base.html
@@ -28,7 +28,7 @@
     }
 
     body {
-        background-color: rgb(30, 32, 32);
+        background-color: rgb(18, 20, 20);;
         color: white !important;
         color-scheme: dark;
     }
