--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
     }
 
     body {
-        color: whitesmoke;
+        color: white;
     }
 
     .nav-link {
@@ -77,9 +77,11 @@
                 <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="font-size: large;">
                         <li class="navbar-brand mt-1 ms-2 me-5 pt-2 pb-3 ps-1 pe-5">
-                            <h2 style="color: rgb(2, 202, 202);">knowmona</h2>
+                            <a href="{% url 'app' %}" style="text-decoration: none;">
+                                <h2 style="color:rgb(2, 202, 202); ">knowmona</h2>
+                            </a>
                         </li>
-                        <li class="nav-item pb-3 me-auto">
+                        <li class="nav-item pb-3 me-auto ms-2">
                             <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="{% url 'app' %}"><svg
                                     xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
                                     class="bi bi-house-door" viewBox="0 0 16 16">
@@ -88,7 +90,7 @@
                                 </svg> Home</a>
                         </li>
                         {% if user.is_authenticated %}
-                        <li class="nav-item pb-3 me-auto">
+                        <li class="nav-item pb-3 me-auto ms-2">
                             <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="{% url 'quizzes' %}"><svg
                                     xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
                                     class="bi bi-journals" viewBox="0 0 16 16">
@@ -98,7 +100,7 @@
                                         d="M1 6v-.5a.5.5 0 0 1 1 0V6h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0V9h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 2.5v.5H.5a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1H2v-.5a.5.5 0 0 0-1 0" />
                                 </svg> Quizzes</a>
                         </li>
-                        <li class="nav-item pb-3 me-auto">
+                        <li class="nav-item pb-3 me-auto ms-2">
                             <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="{% url 'profile' %}"><svg
                                     xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
                                     class="bi bi-person" viewBox="1 1 14 14">
@@ -106,7 +108,7 @@
                                         d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
                                 </svg> Profile</a>
                         </li>
-                        <li class="nav-item pb-3 me-auto">
+                        <li class="nav-item pb-3 me-auto ms-2">
                             <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="{% url 'logout' %}"><svg
                                     xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
                                     class="bi bi-door-open" viewBox="0 0 16 16">
