--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -11,14 +11,18 @@
         content="You can test knowledge on any topic with Knowmona through fun and interactive quizzes!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="shortcut icon" type="image/png" href="{% static '/media/favicon.ico' %}"/>
-    <link rel="stylesheet" href="{% static '/app/homepage_base.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static '/media/favicon.ico' %}" />
     <script src="https://accounts.google.com/gsi/client" async></script>
+    <link rel="stylesheet" href="{% static '/app/homepage_base.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 </head>
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+    
+    p {
+        color: white;
+    }
 </style>
 
 <body>
@@ -26,7 +30,7 @@
         <div class="row flex-nowrap">
             <div class="py-3">
                 <nav class="navbar navbar-expand m-0 p-0">
-                    <a class="navbar-brand" style="margin-left: 9rem;" href="{% url 'home' %}">
+                    <a class="navbar-brand" style="margin-left: 7rem;" href="{% url 'home' %}">
                         <h2 style="color:rgb(2, 202, 202); text-align:left; margin-left: 10px;">knowmona</h2>
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -36,7 +40,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav" style="margin-left: 54rem;">
-                            <a class="nav-item nav-link" href="#features">
+                            <a class="nav-item nav-link" href="{% url 'home' %}#features">
                                 <h6>Features</h6>
                             </a>
                         </div>
@@ -57,23 +61,17 @@
                     </div>
                 </nav>
                 <br>
-                <div class="container" style="margin-left: 12rem; margin-right: 12rem;">
-                    <h3>Contact</h3>
+                <div class="container" style="margin-left: 12rem; margin-right: 12rem; padding-right: 12rem;">
+                    <h2 class="welcome" style="color: rgb(164, 164, 164);">Contact</h2>
                     <p>
-                        For any concerns, issues, security vulnerabilities, suggestion for improvements and features, or
-                        inquiries,
-                        please send an email to:
+                        For any concerns, issues, security vulnerabilities, suggestion for improvements and features, or inquiries, please send an email to:
                     </p>
-                    <br>
                     <p>knowmonacontact@gmail.com</p>
-                    <br>
-                    <p>
-                        Thank you!😊
-                    </p>
+                    <p>Thank you!😊</p>
                 </div>
                 <br>
-                <hr style="margin-top: 21rem;">
-                <div style="text-align: center; margin-top: 20px;">
+                <hr style="margin-top: 24rem;">
+                <div style="text-align: center;">
                     <small><a style="color: rgb(139, 139, 139); text-decoration: none;"
                             href="http://dev.knowmona.com">Grantley Cullar 2025</a></small>
                 </div>
