--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -32,7 +32,7 @@
 
     body {
         background-color: rgb(18, 20, 20);
-        color: #f1f1f1 !important;
+        color: white !important;
     }
 </style>
 
@@ -41,7 +41,7 @@
         <div class="row flex-nowrap">
             <div class="py-3">
                 <nav class="navbar navbar-expand m-0 p-0">
-                    <a class="navbar-brand" style="margin-left: 9rem;" href="{% url 'home' %}">
+                    <a class="navbar-brand" style="margin-left: 7rem;" href="{% url 'home' %}">
                         <h2 style="color:rgb(2, 202, 202); text-align:left; margin-left: 10px;">knowmona</h2>
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -51,7 +51,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav" style="margin-left: 54rem;">
-                            <a class="nav-item nav-link" href="#features">
+                            <a class="nav-item nav-link" href="{% url 'home' %}#features">
                                 <h6>Features</h6>
                             </a>
                         </div>
@@ -73,14 +73,14 @@
                 </nav>
                 <br>
                 <div class="container">
-                    <div class="row mb-5">
+                    <div class="row mb-5 mt-3">
                         <div class="col"><img src="{% static 'media/homephoto.png' %}" alt="Homepage image"
                                 style="width: 650px; height: 520px;">
                         </div>
 
 
                         <div class="col text-center">
-                            <h1 style="text-align: center; margin-top: 60px;">Have fun and learn from testing your
+                            <h1 style="text-align: center; margin-top: 100px;">Have fun and learn from testing your
                                 knowledge on anything!</h1>
                             <a href="{% url 'signup' %}"
                                 style="background-color:rgb(36, 164, 111); color: white; text-decoration: none;"
@@ -107,35 +107,39 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mb-5" id="features">
+                <div class="row mb-5 mt-5 ms-5" id="features">
                     <div class="col text-center">
-                        <h1 style="text-align: center; margin-top: 140px;">Let AI generate quizzes about any topic or
+                        <h1 style="text-align: center; margin-top: 190px;">Let <font style="color: rgb(2, 202, 202);">
+                                AI generate quizzes</font> about any topic or
                             subject on the fly</h1>
                     </div>
 
-                    <div class="col"><img src="{% static 'media/quiz-screenshot.png' %}" alt="Quiz example"
-                            style="width: 463px; height: 347px; border-radius: 10%;">
+                    <div class="col">
+                        <h3 class="text-left mb-3 text-muted" style=" margin-left: 4rem; margin-top: 60px;">newton's laws
+                            of motion</h3>
+                        <img src="{% static 'media/quiz-screenshot.png' %}" alt="Quiz example"
+                            style="width: 463px; height: 347px; border-radius: 5%; margin-left: 4rem;">
                     </div>
                 </div>
-                <div class="row mb-5">
+                <div class="row mb-5 mt-5">
                     <div class="col"><img src="{% static 'media/files-and-web-search.png' %}" alt="Homepage image"
-                            style="width: 463px; height: 347px;">
+                            style="width: 463px; height: 347px; margin-left: 7rem;">
                     </div>
 
-                    <div class="col text-center">
-                        <h1 style="text-align: center; margin-top: 140px;">Automated web search and uploaded files for
-                            customized context</h1>
+                    <div class="col text-center me-5">
+                        <h1 style="text-align: center; margin-top: 100px;">Automated web search and uploaded files for
+                            <font style="color: rgb(2, 202, 202);">personalized learning</font>
+                        </h1>
                     </div>
                 </div>
-                <br>
-                <hr style="margin-top: 20px;">
-                <div style="text-align: center; margin-top: 20px;">
+
+                <hr style="margin-top: 5rem;">
+                <div style="text-align: center;">
                     <small><a style="color: rgb(139, 139, 139); text-decoration: none;"
                             href="http://dev.knowmona.com">Grantley Cullar 2025</a></small>
                 </div>
             </div>
         </div>
-
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
