--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -40,7 +40,7 @@
 			data-text="signin_with" data-size="large" data-logo_alignment="center" data-width="400">
 		</div>
 
-		<button id="custom-google-btn" class="btn rounded-pill btn-outline-success" style="color: whitesmoke;"><svg
+		<button id="custom-google-btn" class="btn rounded-pill btn-outline-success" style="color: white;"><svg
 				xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-google"
 				viewBox="0 0 18 18">
 				<path
