Update template color

--- a/app/templates/auth_base.html
+++ b/app/templates/auth_base.html
@@ -29,7 +29,7 @@
 
     body {
         background-color: rgb(18, 20, 20);;
-        color: white !important;
+        color: whitesmoke !important;
         color-scheme: dark;
     }
 
