--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -21,7 +21,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
     
     p {
-        color: white;
+        color: whitesmoke;
     }
 </style>
 
