--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -32,7 +32,7 @@
 
     body {
         background-color: rgb(18, 20, 20);
-        color: white !important;
+        color: whitesmoke !important;
     }
 </style>
 
