--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,7 +6,7 @@
 
 <div>
 	<div class="card pt-4 pb-5 px-5 mt-2 bg-card-primary">
-		<h2 style="text-align: center; color: white;">log in</h2>
+		<h2 style="text-align: center; color: whitesmoke;">log in</h2>
 		<br>
 
 		<form method="POST" action="{% url 'login' %}">
@@ -40,7 +40,7 @@
 			data-text="signin_with" data-size="large" data-logo_alignment="center" data-width="400">
 		</div>
 
-		<button id="custom-google-btn" class="btn rounded-pill btn-outline-success" style="color: white;"><svg
+		<button id="custom-google-btn" class="btn rounded-pill btn-outline-success" style="color: whitesmoke;"><svg
 				xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-google"
 				viewBox="0 0 18 18">
 				<path
