--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -44,7 +44,7 @@
 				data-text="signup_with" data-size="large" data-logo_alignment="center" data-width="400">
 			</div>
 
-			<button id="custom-google-btn" class="btn rounded-pill btn-outline-success" style="color: white;"><svg
+			<button id="custom-google-btn" class="btn rounded-pill btn-outline-success" style="color: whitesmoke;"><svg
 					xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-google"
 					viewBox="0 0 18 18">
 					<path
