--- a/app/templates/leaderboard.html
+++ b/app/templates/leaderboard.html
@@ -34,7 +34,7 @@
                         <div class="card">
                             <div class="card-body d-flex justify-content-between align-items-center">
                                 <div class="user-info">
-                                    <h5 class="card-title mb-0">{{ learner.nickname }}</h5>
+                                    <h5 class="card-title mb-0">{{ forloop.counter }} {{ learner.first_name }}</h5>
                                 </div>
                                 <div class="xp-info">
                                     <span>{{ learner.experience_points }} XP</span>
