Add friend feature

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-success mt-3">Update</button>
+            <button type="submit" class="btn btn-success mt-3 rounded-pill">Update</button>
         </form>
         {% else %}
         <p>Please <a href="{% url 'login' %}">log in</a> to access your profile.</p>
