--- a/app/templates/template_activate_account.html
+++ b/app/templates/template_activate_account.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
-<h2><b>Activate your Knowmona account</b></h2>
+Activate your Knowmona account
 
 Hello {{ user.nickname }}!
 
