--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -75,7 +75,7 @@
         <div class="row flex-nowrap">
             <div class=" col-auto col-md-3 col-xl-2 px-sm-2 px-0 " style=" background-color: rgb(24, 26, 26);">
                 <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="font-size: large;">
+                    <ul class="navbar-nav me-auto mb-2 me-2 mb-lg-0" style="font-size: large;">
                         <li class="navbar-brand mt-1 ms-2 me-5 pt-2 pb-3 ps-1 pe-5">
                             <a href="{% url 'app' %}" style="text-decoration: none;">
                                 <h2 style="color:rgb(2, 202, 202); ">knowmona</h2>
@@ -83,7 +83,7 @@
                         </li>
                         <li class="nav-item pb-3 me-auto ms-2">
                             <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="{% url 'app' %}"><svg
-                                    xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="mb-2" fill="currentColor"
+                                    xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="mb-2 me-2" fill="currentColor"
                                     class="bi bi-house-door" viewBox="0 0 16 16">
                                     <path
                                         d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4z" />
@@ -91,7 +91,7 @@
                         </li>
                         <li class="nav-item pb-3 me-auto ms-2">
                             <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="{% url 'quizzes' %}"><svg
-                                    xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="mb-2" fill="currentColor"
+                                    xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="mb-2 me-2" fill="currentColor"
                                     class="bi bi-journals" viewBox="0 0 16 16">
                                     <path
                                         d="M5 0h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2 2 2 0 0 1-2 2H3a2 2 0 0 1-2-2h1a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1H1a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v9a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1H3a2 2 0 0 1 2-2" />
@@ -99,22 +99,27 @@
                                         d="M1 6v-.5a.5.5 0 0 1 1 0V6h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0V9h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 2.5v.5H.5a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1H2v-.5a.5.5 0 0 0-1 0" />
                                 </svg> Quizzes</a>
                         </li>
-                        <!---
                         <li class="nav-item pb-3 me-auto ms-2">
-                            <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-people mb-1" viewBox="0 0 16 16">
+                            <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="{% url 'shared_quizzes' %}"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                                class="bi bi-share mb-2 me-2" viewBox="0 0 16 16">
+                                <path
+                                    d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3" />
+                            </svg> Shared</a>
+                        </li>
+                        <li class="nav-item pb-3 me-auto ms-2">
+                            <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="{% url 'friends' %}"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-people mb-1 me-2" viewBox="0 0 16 16">
                                 <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1zm-7.978-1L7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002-.014.002zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4m3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0M6.936 9.28a6 6 0 0 0-1.23-.247A7 7 0 0 0 5 9c-4 0-5 3-5 4q0 1 1 1h4.216A2.24 2.24 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816M4.92 10A5.5 5.5 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0m3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4"/>
                               </svg> Friends</a>
                         </li>
-                        -->
                         <li class="nav-item pb-3 me-auto ms-2">
-                            <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="{% url 'profile' %}"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-person mb-2" viewBox="0 0 16 16">
+                            <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="{% url 'profile' %}"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-person mb-2 me-2" viewBox="0 0 16 16">
                                 <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
                               </svg> Profile</a>
                         </li>
                         <li class="nav-item pb-3 me-auto ms-2">
                             <a class="nav-link mt-0 mb-1 ms-0 me-5 pt-2 pb-2 ps-2 pe-2" href="{% url 'logout' %}"><svg
                                     xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                                    class="bi bi-door-open mb-2" viewBox="0 0 16 16">
+                                    class="bi bi-door-open mb-2 me-2" viewBox="0 0 16 16">
                                     <path d="M8.5 10c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1" />
                                     <path
                                         d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117M11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5M4 1.934V15h6V1.077z" />
