Update template buttons

--- a/app/templates/friends.html
+++ b/app/templates/friends.html
@@ -4,10 +4,10 @@
 {% block content %}
 <div class="col-md-6 offset-md-3">
     <form method="GET" class="mb-4">
-        <div class="input-group">
-            <input type="text" class="form-control" name="query" placeholder="Search by name or nickname"
+        <div class="flex-wrapper" style="display: flex;">
+            <input type="text" class="form-control rounded-pill me-1" name="query" placeholder="Search by name or nickname"
                 value="{{ search_query|default:'' }}">
-            <button class="btn btn-outline-secondary" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+            <button class="btn btn-outline-secondary rounded-pill" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16"
                     height="16" fill="whitesmoke" class="bi bi-search" viewBox="0 0 16 16">
                     <path
                         d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
